Port effective-pom, effective-settings, evaluate and system mojos